--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>MIHEALTH</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
